# askier

./: .clang-format  .gitignore  CMakeLists.txt  README.md  test.py  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt
apps/askier-cli/: CMakeLists.txt  main.cpp
apps/askier-gui/: CMakeLists.txt  main.cpp
include/askier/: ASCIIDrawGlyphsOCL.hpp  AsciiMapper.hpp  AsciiPipeline.hpp  AsciiRenderer.hpp  AsciimapOCL.hpp  Constants.hpp  Dithering.hpp  GlyphDensityCalibrator.hpp  ImageUtils.hpp  VideoCaptureWorker.hpp  version.hpp.in
include/gui/: ConversionParamsDialog.hpp  DoubleSlider.hpp  MainWindow.hpp
include/util/: util.hpp
libs/: CMakeLists.txt
libs/askier/: ASCIIDrawGlyphsOCL.cpp  AsciiMapper.cpp  AsciiPipeline.cpp  AsciiRenderer.cpp  AsciimapOCL.cpp  CMakeLists.txt  FloydSteinbergDither.cpp  GlyphDensityCalibrator.cpp  ImageUtils.cpp  OrderedDither.cpp  VideoCaptureWorker.cpp
libs/gui/: CMakeLists.txt  ConversionParamsDialog.cpp  DoubleSlider.cpp  MainWindow.cpp
libs/util/: CMakeLists.txt  OpenCLDeviceDescription.cpp
